--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="The Three-point Estimation technique is used in management and information systems applications for the construction of an approximate probability distribution representing the outcome of future events, based on very limited information.">
     <link rel="apple-touch-icon" sizes="57x57" href="./img/icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="72x72" href="./img/icons/apple-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="76x76" href="./img/icons/apple-icon-76x76.png">
