--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <link rel="icon" href="./favicon.ico">
     <link rel="manifest" href="./manifest.json">
     <title>Three-point Estimation - A technique to estimate tasks with triangular distribution</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&display=swap">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   </head>
   <body>
